--- a/src/Busybee/SecurityBundle/Resources/views/User/checkEmail.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/checkEmail.html.twig
@@ -1,4 +1,4 @@
-{% extends "BusybeeHomeBundle:Default:index.html.twig" %}
+{% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
