--- a/src/Busybee/SystemBundle/Resources/views/Install/misc.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Install/misc.html.twig
@@ -198,6 +198,8 @@
 	</script>
 	<script type="text/javascript" src="{{ asset('js/bootstrap-checkbox.min.js') }}"></script>
 	<script type="text/javascript">
-		$('.yes-no').checkboxpicker();
+		$('.yes-no').checkboxpicker({
+			iconCls: 'glyphicons'
+		});
 	</script>
 {% endblock javascripts %}
