--- a/src/Busybee/SecurityBundle/Resources/views/User/reset_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/reset_content.html.twig
@@ -4,20 +4,15 @@
 {{ form_start(form) }}
 	<div id="form_body" class="container-fluid">
 		<div class="row">
-			<div class="col-sm-6 ">
-				<div class="well row">
+			<div class="col-sm-6 well">
 					{{form_row(form.plainPassword.first) }}
-				</div>
 			</div>
-			<div class="col-sm-6 ">
-				<div class="well row">
+			<div class="col-sm-6 well">
 					{{form_row(form.plainPassword.second) }}
-				</div>
 			</div>
 		</div>
 		<div class="row ">
-			<div class="col-sm-6 col-sm-offset-6">
-				<div class="well row">
+			<div class="col-sm-6 col-sm-offset-6 well">
 					<div class="text-right form-group">
 						{{form_widget(form.save) }}
 						{{form_widget(form.cancel) }}
