--- a/src/Busybee/HomeBundle/Resources/views/Menu/site-menu.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/site-menu.html.twig
@@ -13,6 +13,7 @@
 {% endif %}
 		</ul>
 	</li>
+	{% include 'BusybeePersonBundle:Menu:person.html.twig' %}
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ 'menu.Misc'|trans }}<span class="caret"></span></a>
 		<ul class="dropdown-menu">
