--- a/src/Busybee/PersonBundle/Resources/views/Menu/person.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Menu/person.html.twig
@@ -5,6 +5,7 @@
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ 'menu.Person'|trans }}<span class="caret"></span></a>
 		<ul class="dropdown-menu">
-			<li><a href="{{ path("staff_person") }}">{{ 'menu.people.staff'|trans }}</a></li> 
+			<li><a href="{{ path("person_manage") }}">{{ 'menu.people.person.manage'|trans }}</a></li> 
+			<li><a href="{{ path("staff_manage") }}">{{ 'menu.people.staff.manage'|trans }}</a></li> 
 		</ul>
 	</li>
