--- a/src/Busybee/PersonBundle/Resources/views/Address/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/index.html.twig
@@ -15,7 +15,7 @@
 {% block contentContainer %}
 {{ form_start(form, {'action': path('address_edit', {'id': id}), 'method': 'POST'}) }}
 	<div class="container-fluid">
-		<div class='row' id="addressMessage" style="display: none;">
+		<div class='row' id="addressMessage{{ form.vars.name }}" style="display: none;">
 		</div>
 	</div>
 	<div id="addressContent">
@@ -26,6 +26,6 @@
 
 {% block javascripts %}
 	{{ parent() }}
-	{% include 'BusybeePersonBundle:Address:script.html.twig' %}
-	{% include 'BusybeePersonBundle:Locality:script.html.twig' %}
+	{% include 'BusybeePersonBundle:Address:script.html.twig' with {'classSuffix': ''} %}
+	{% include 'BusybeePersonBundle:Locality:script.html.twig' with {'classSuffix': ''} %}
 {% endblock javascripts %}
