--- a/src/Busybee/PersonBundle/Resources/views/Address/script.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/script.html.twig
@@ -2,41 +2,43 @@
 
 {% trans_default_domain "BusybeePersonBundle" %}
 
+{% if classSuffix is not defined %}{% set classSuffix = '' %}{% endif %}
+
 	<script>
-		$('.beeAddressList').change(function() {
+		$('.beeAddressList{{ classSuffix }}').change(function() {
 		  	$.ajax({
 				url: '{{ path('address_fetch') }}',	
 				data: {'id': $(this).val()},
 				type: 'POST',
 				success: function(data) {
-					$('.beeLine1').val(data.line1);
-					$('.beeTerritory').val(data.line2);
-					$('.beeLocalityList').val(data.locality);
-					$(".beeLocalityList").trigger('change');
+					$('.beeLine1{{ classSuffix }}').val(data.line1);
+					$('.beeTerritory{{ classSuffix }}').val(data.line2);
+					$('.beeLocalityList{{ classSuffix }}').val(data.locality);
+					$(".beeLocalityList{{ classSuffix }}").trigger('change');
 				}
 			});
 		});
-		$('.beeAddressSave').click(function() {
+		$('.beeAddressSave{{ classSuffix }}').click(function() {
 			$.ajax({
 				url: '{{ path('address_edit') }}',	
 				data: {
-					'id': $('.beeAddressList').val(),
-					'line1': $('.beeLine1').val(),
-					'line2': $('.beeLine2').val(),
-					'locality_id': $('.beeLocalityList').val()
+					'id': $('.beeAddressList{{ classSuffix }}').val(),
+					'line1': $('.beeLine1{{ classSuffix }}').val(),
+					'line2': $('.beeLine2{{ classSuffix }}').val(),
+					'locality_id': $('.beeLocalityList{{ classSuffix }}').val()
 				},
 				type: 'POST',
 				success: function(data) {
-					$('.beeLocalityList').val(data.locality);
-					$('.beeLine1').val(data.line1);
-					$('.beeLine2').val(data.line2);
-					$(".beeAddressList").html(data.options);
-					$(".beeAddressList").val(data.id);
-					$('#addressMessage').show()
-					$('#addressMessage').removeClass().addClass('row alert alert-' + data.status);
-					$('#addressMessage').html(data.message);
-					$('#addressMessage').fadeOut(3000);
-					$(".beeLocalityList").trigger('change');
+					$('.beeLocalityList{{ classSuffix }}').val(data.locality);
+					$('.beeLine1{{ classSuffix }}').val(data.line1);
+					$('.beeLine2{{ classSuffix }}').val(data.line2);
+					$(".beeAddressList{{ classSuffix }}").html(data.options);
+					$(".beeAddressList{{ classSuffix }}").val(data.id);
+					$('#addressMessage{{ classSuffix }}').show()
+					$('#addressMessage{{ classSuffix }}').removeClass().addClass('row alert alert-' + data.status);
+					$('#addressMessage{{ classSuffix }}').html(data.message);
+					$('#addressMessage{{ classSuffix }}').fadeOut(3000);
+					$(".beeLocalityList{{ classSuffix }}").trigger('change');
 				}
 			});
 		});
