--- a/src/Busybee/PersonBundle/Resources/views/Locality/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Locality/index.html.twig
@@ -15,7 +15,7 @@
 {% block contentContainer %}
 {{ form_start(form, {'action': path('locality_edit', {'id': id}), 'method': 'POST'}) }}
 	<div class="container-fluid">
-		<div class='row' id="localityMessage" style="display: none;">
+		<div class='row' id="localityMessage{{ form.vars.name}}" style="display: none;">
 		</div>
 	</div>
 	<div id="localityContent">
