--- a/src/Busybee/PersonBundle/Resources/views/Locality/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Locality/edit.html.twig
@@ -11,8 +11,13 @@
 		<div class="panel-body">
 			<div class="container-fluid">
 				<div class='row'>
-					<div class='col-sm-12 well'>
-						{{ form_row(form.localityList) }}
+					<div class='col-sm-9 well'>
+						{{ form_row(form.localityList, {'value': form.vars.value.id|trim }) }}
+					</div>
+					<div class='col-sm-3 well'>
+						<div class='form-widget text-right'>
+							{{ form_widget(form.save) }}
+						</div>
 					</div>
 				</div>
 				<div class='row'>
@@ -24,16 +29,11 @@
 					</div>
 				</div>
 				<div class='row'>
-					<div class='col-sm-4 well'>
+					<div class='col-sm-6 well'>
 						{{ form_row(form.postCode) }}
 					</div>
-					<div class='col-sm-5 well'>
+					<div class='col-sm-6 well'>
 						{{ form_row(form.country) }}
-					</div>
-					<div class='col-sm-3 well'>
-						<div class='form-widget text-right'>
-							{{ form_widget(form.save) }}
-						</div>
 					</div>
 				</div>
 			</div>
