--- a/src/Busybee/PersonBundle/Resources/views/Address/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/edit.html.twig
@@ -12,10 +12,15 @@
 		<div class="panel-body">
 			<div class="container-fluid">
 				<div class='row'>
-					<div class='col-sm-9 well'>
-						{{ form_row(form.addressList) }}
+					<div class='col-sm-6 well'>
+						{{ form_row(form.addressList, {'value': form.vars.value.id|trim}) }}
 					</div>
-					<div class='col-sm-3 well'>
+					<div class='col-sm-4 well'>
+						<div class='form-group' id="addressDisplay{{ form.vars.data.getClassSuffix }}">
+
+						</div>
+					</div>
+					<div class='col-sm-2 well'>
 						<div class='form-group text-right'>
 							{{ form_widget(form.save) }}
 						</div>
@@ -31,7 +36,7 @@
 				</div>
 			</div>
 			<div class="container-fluid">
-				<div class='row' id="localityMessage" style="display: none;">
+				<div class='row' id="localityMessage{{ form.vars.data.getClassSuffix }}" style="display: none;">
 				</div>
 			</div>
 			<div id="localityContent">
