--- a/src/Busybee/PersonBundle/Resources/views/Address/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/edit.html.twig
@@ -4,6 +4,13 @@
 
 {% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
 
+{% set classSuffix = form.vars.name %}
+
+{% if form.vars.data is not null %}
+	{% set address_id = form.vars.data.id %}
+{% else %}
+	{% set address_id = form.vars.value %}
+{% endif %}
 
 	<div class="panel panel-primary busybee-panel">
 		<div class="panel-heading">
@@ -14,10 +21,10 @@
 			<div class="container-fluid">
 				<div class='row'>
 					<div class='col-sm-6 well'>
-						{{ form_row(form.addressList, {'value': form.vars.data.id|trim}) }}
+						{{ form_row(form.addressList, {'value': address_id|trim}) }}
 					</div>
 					<div class='col-sm-4 well'>
-						<div class='form-group' id="addressDisplay{{ form.vars.data.getClassSuffix }}">
+						<div class='form-group' id="addressDisplay{{ classSuffix }}">
 							{{ address|raw }}
 						</div>
 					</div>
@@ -37,7 +44,7 @@
 				</div>
 			</div>
 			<div class="container-fluid">
-				<div class='row' id="localityMessage{{ form.vars.data.getClassSuffix }}" style="display: none;">
+				<div class='row' id="localityMessage{{ classSuffix }}" style="display: none;">
 				</div>
 			</div>
 			<div id="localityContent">
