--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -17,39 +17,8 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-4 well">
-					{{ form_row(form.surname) }}
-				</div>
-				<div class="col-sm-4 well">
-					{{ form_row(form.firstName) }}
-				</div>
-				<div class="col-sm-4 well">
-					{{ form_row(form.photo) }}
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-2 well">
-					{{ form_row(form.title) }}
-				</div>
-				<div class="col-sm-4 well">
-					{{ form_row(form.preferredName) }}
-				</div>
-				<div class="col-sm-2 well">
-					{{ form_row(form.gender) }}
-				</div>
-				<div class="col-sm-4 well">
-					{{ form_row(form.officialName) }}
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-4 well">
-					{{ form_row(form.email) }}
-				</div>
-				<div class="col-sm-4 well">
-					{{ form_row(form.email2) }}
-				</div>
-				<div class="col-sm-4 well">
-					{{ form_row(form.dob) }}
+				<div class="col-sm-6 col-sm-offset-6 well">
+					{{ form_row(form.website) }}
 				</div>
 			</div>
 		</div>
