--- a/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
@@ -15,6 +15,7 @@
 <div id="personTabs">
 	<ul class="nav nav-tabs" role="tablist">
 		<li><a href="#person" role="tab" data-toggle="tab">{{ 'person.tab.person'|trans }}</a></li>
+		<li><a href="#contact" role="tab" data-toggle="tab">{{ 'person.tab.contact'|trans }}</a></li>
 		<li><a href="#address1" role="tab" data-toggle="tab">{{ 'person.tab.address1'|trans }}</a></li>
 		<li><a href="#address2" role="tab" data-toggle="tab">{{ 'person.tab.address2'|trans }}</a></li>
 	</ul>
@@ -25,6 +26,9 @@
 				</div>
 			</div>
 			{{ include('BusybeePersonBundle:Person:person.html.twig') }}
+		</div>
+		<div class="tab-pane" id="contact" >
+			{% include 'BusybeePersonBundle:Person:contact.html.twig' %}
 		</div>
 		<div class="tab-pane" id="address1" >
 			<div class="container-fluid">
